- Add command line processing
- Commented out Signal Statistics stuff since it's causing hangs with my second tuner.
- Added pausing to TSFileSource source
- Fixed TSFileSource source to be able to load a file a second time
- Upgraded DWThread class
- Fixed transparency with osd lists in directdraw mode
- Added an UpdateData thread to BDADVBTSource to get Signal Statistics

bear:
Changes:
- Fixed a few bugs regarding the ViewRecordFile function.
- Started rationalise the code into the filtergraph tools class.
- Extended the close display function on QuiteOnMinimise to the "Watch TV" mode so you can open several instances of DW and select the instance you want to watch by maximising. 
- Added a Remember Last Service setting, as well as saving the last service used in the settings.xml file.
- Added a function to view a recording file while in timeshift mode, key shift "W", just "W" returns to the timeshift file.
- Added a extra command to the SetSource function, can now timeshift the channel your watching by pressing pause. 
- Fixed the Fast timeshift change method, was not updating the demux pids after the demux was connected.
- Added in some other changes.
- Added some changes to allow the video decoder/overlay mixer render method to still work if the mixer is in use, will now default to windowless mode. Note: In the decoder.xml file you now need to Add the input filter prior to adding the overlay mixer.
- Added some code to fix the picture if the Timeshift format is not set.
- Changed the file Writing flags back to normal file buffering, double buffering is now active in both the TSFileSink and DWDump filters.
- Added a CloseBuffersOnMinimise setting, This just means that when you minimise the application via the mouse you can option to close any unused sink graphs or not.