@@ -678,6 +678,15 @@ $(() - $(
 			<height>40</height>
 			<gap>10</gap>
 			<font height=30 weight=700 color="#FFFFFF" />
+			<text> Long Network Name</text>
+			<onSelect>ShowMenu("LongNetworkName")</onSelect>
+			<onRight>ShowMenu("LongNetworkName")</onRight>
+		</item>
+
+		<item>
+			<height>40</height>
+			<gap>10</gap>
+			<font height=30 weight=700 color="#FFFFFF" />
 			<text> Start With Full Screen</text>
 			<onSelect>ShowMenu("StartFullscreen")</onSelect>
 			<onRight>ShowMenu("StartFullscreen")</onRight>
@@ -1042,7 +1051,7 @@ $(() - $(
 		<Key code= 40>Down()</>
 	</keys>
 
-	<list name="MultiCardOptions">
+	<list name="RememberLastServiceOptions">
 		<pos x=560 y=100 />
 		<size width=200 height=400 />
 		<selection>settings.application.rememberLastService</selection>
@@ -1073,6 +1082,51 @@ $(() - $(
 			<font height=30 weight=700 color="#FFFFFF" />
 			<text> False</text>
 			<onSelect>SetRememberLastService("False") ShowMenu("RememberLastService")</onSelect>
+		</item>
+	</list>
+
+</window>
+
+<window name="LongNetworkName">
+	<keys>
+		<Key code= 13>Select()</>
+		<Key code= 37>ExitMenu(-1) ShowMenu("AppSetup") ShowMenu("GlobalSetup") </>
+		<Key code= 38>Up()</>
+		<Key code= 39>right()</>
+		<Key code= 40>Down()</>
+	</keys>
+
+	<list name="LongNetworkNameOptions">
+		<pos x=560 y=100 />
+		<size width=200 height=400 />
+		<selection>settings.application.longNetworkName</selection>
+		
+		<itemTemplate>
+			<height>40</height>
+			<gap>5</gap>
+			<font height=30 weight=700 color="#FFFFFF" />
+			<align horizontal="left"/>
+			<background>
+				<image>BrownButton</image>
+				<highlightImage>GreenButton</highlightImage>
+				<selectedImage>SelectedButton</SelectedImage>
+			</background>
+		</itemTemplate>
+
+		<item>
+			<height>40</height>
+			<gap>10</gap>
+			<font height=30 weight=700 color="#FFFFFF" />
+			<text> True</text>
+			<onSelect>SetLongNetworkName("True") ShowMenu("LongNetworkName")</onSelect>
+		</item>
+
+		<item>
+			<height>40</height>
+			<gap>10</gap>
+			<font height=30 weight=700 color="#FFFFFF" />
+			<text> False</text>
+			<onSelect>SetLongNetworkName("False") ShowMenu("LongNetworkName")</onSelect>
 		</item>
 	</list>
 
