@@ -29,6 +29,7 @@ nate:
 
 bear:
 Changes:
+- Added a extended network name option to the settings menu so that the network name can be identified by adding the TSID value.
 - Fixed a few bugs regarding the ViewRecordFile function.
 - Started rationalise the code into the filtergraph tools class.
 - Extended the close display function on QuiteOnMinimise to the "Watch TV" mode so you can open several instances of DW and select the instance you want to watch by maximising. 
